# gpui-min

./: Cargo.toml  flake.nix  shell.nix
crates/gpui/: Cargo.toml
crates/gpui/examples/image/: image.rs
crates/gpui/src/: action.rs  app.rs  asset_cache.rs  gpui.rs  key_dispatch.rs  keymap.rs  platform.rs  style.rs  subscription.rs  taffy.rs  text_system.rs  window.rs
crates/gpui/src/app/: entity_map.rs  test_context.rs
crates/gpui/src/elements/: div.rs  img.rs  list.rs
crates/gpui/src/platform/blade/: blade_atlas.rs  blade_renderer.rs
crates/gpui/src/platform/cosmic_text/: text_system.rs
crates/gpui/src/platform/linux/wayland/: client.rs  serial.rs  window.rs
crates/gpui/src/platform/linux/x11/: client.rs
crates/gpui/src/platform/mac/: text_system.rs
crates/gpui/src/platform/test/: dispatcher.rs  platform.rs  window.rs
crates/gpui/src/text_system/: line_layout.rs  line_wrapper.rs
crates/media/: Cargo.toml
crates/sum_tree/: Cargo.toml
crates/util/: Cargo.toml
crates/util/src/: util.rs
crates/util/src/test/: marked_text.rs
