[package]
name = "sum_tree"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"

[lints]
workspace = true

[lib]
path = "src/sum_tree.rs"
doctest = false

[dependencies]
arrayvec = "0.7.1"
rayon = "1.8"

[dev-dependencies]
ctor.workspace = true
log.workspace = true
env_logger.workspace = true
rand.workspace = true
