[package]
name = "util"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"

[lints]
workspace = true

[lib]
path = "src/util.rs"
doctest = true

[features]
test-support = []

[dependencies]
anyhow.workspace = true
dirs.workspace = true
futures.workspace = true
globset.workspace = true
log.workspace = true
rand.workspace = true
regex.workspace = true
rust-embed.workspace = true
serde.workspace = true
serde_json.workspace = true
async-fs.workspace = true
futures-lite.workspace = true
take-until = "0.2.0"
unicase.workspace = true

[target.'cfg(windows)'.dependencies]
tendril = "0.4.3"
